# techno_watch_ia

./: .dockerignore  .env.example  .gitignore  Dockerfile.web  LICENCE  README.md  __init__.py  add_latency.py  fic1.txt  jinja_filters.py  main.py  main_agent.py  main_agent_rss.py  ollama.yml  pyproject.toml  read_opml.py  send_articles_email.py  techno-watch.yml  web.py  web.yml
.github/workflows/: branch-naming.yml
app/: __init__.py  __main__.py  jinja_filters.py  main_agent.py  read_opml.py  run.py  send_articles_email.py
app/core/: __init__.py  logger.py  utils.py
app/db/: __init__.py  db.py
app/models/: __init__.py  article.py  emails.py  states.py
app/nodes/: __init__.py  fetch_nodes.py  filter_nodes.py  output_nodes.py  save_nodes.py  send_nodes.py  summarize_nodes.py  utils_fetch_nodes.py
app/services/: decorators.py  factory_fetcher.py  model_service.py  models.py  sources_ponderation.py  utils_fetchers.py
app/services/fetchers/: __init__.py  base_fetcher.py  bluesky_fetcher.py  reedit_fetcher.py  rss_fetcher.py  web_fetcher.py
app/templates/web/: index.html
app/templates/web/fragments/: _icon_brand.html  _search_ajax_results.html  _search_banner.html
cli/: __init__.py  agent_rss_lg.py  feed_test.py  read_opml.py  send_articles_email.py  sendemail.py  utils.py  vector_db.py
cli/templates/: email_template.html.j2  email_template.text.j2
core/: __init__.py  db.py  logger.py  services.py  utils.py
data/: myweb.txt
db/: __init__.py  db.py
docker/: Dockerfile.app  Dockerfile.web  README.md  ollama.yml  requirements-web.txt
models/: article.py  articles_db.py  emails.py  states.py
nodes/: __init__.py  fetch_nodes.py  filter_nodes.py  output_nodes.py  save_nodes.py  send_nodes.py  summarize_nodes.py  utils_fetch_nodes.py
services/: annotations.py  base_fetcher.py  bluesky_fetcher.py  decorators.py  factory_fetcher.py  fetch_nodes.py  model_service.py  models.py  reedit_fetcher.py  rss_fetcher.py  sources_ponderation.py  utils_fetchers.py
services/fetchers/: __init__.py  base_fetcher.py  bluesky_fetcher.py  reedit_fetcher.py  rss_fetcher.py
templates/: email_template.html.j2  email_template.text.j2
templates/web/: index.html  styles.css
templates/web/fragments/: _dates_filters.html  _search_ajax_results.html  _search_banner.html  _toc.html
tests/: conftest.py  test_send_articles_email.py  test_sources_ponderation.py
tests/k6/: README.md  analyse.py  common-options.js  k6_analyser.py  run_comparison.sh  test_articles.js  test_articles_async.js  test_articles_sync.js  test_realistic_scenarios.js
