[project]
name = "techno-watch-ia"
version = "0.1.0"
description = "Veille techno pour une revue de presse RSS ou Atom"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "beautifulsoup4>=4.13.5",
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.12.0",
    "feedparser>=6.0.11",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]
