[project]
name = "techno-watch-ia"
version = "0.3.1"
description = "Veille techno pour une revue de presse RSS/Atom, Reddit, Bluesky"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "beautifulsoup4>=4.13.5",
    "colorama>=0.4.6",
    "python-dotenv>=1.0.0",
    "faiss-cpu>=1.12.0",
    "feedparser>=6.0.11",
    "langchain-community>=0.3.29",
    "langchain-ollama>=0.3.7",
    "langchain-openai>=0.3.32",
    "langgraph>=0.6.6",
    "pydantic>=2.11.7",
    "python-dateutil>=2.9.0.post0",
    "scikit-learn>=1.7.1",
    "sentence-transformers>=5.1.0",
    "ipython>=9.5.0",
    "grandalf>=0.8",
    "matplotlib>=3.10.6",
    "nltk>=3.9.1",
    "sqlalchemy>=2.0.43",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pytz>=2025.2",
    "praw>=7.8.1",
    "tiktoken>=0.11.0",
    "atproto>=0.0.62",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.12.12",
]
